fix: make icon appear on mobile

--- a/style.css
+++ b/style.css
@@ -10350,3 +10350,9 @@ body {
     display: none
   }
 }
+
+@media only screen and (max-width: 1200px) {
+  .news-detail__img {
+    border-width: 20px 100px !important;
+  }
+}
